--- a/replica.yml
+++ b/replica.yml
@@ -1,8 +1,8 @@
-apiVersion: v1
-kind:ReplicaSet
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
   name: my-app
-spec:  # ReplicaSet
+spec:
   replicas: 3
   selector:
     matchLabels:
@@ -10,10 +10,10 @@ spec:  # ReplicaSet
   template:
     metadata:
       labels:
-        app: nginx  #app label is used to match the pods to the ReplicaSet  
-    spec:  # Pod template
+        app: my-app
+    spec:
       containers:
         - name: nginx
-          image: nginx:latest  # image to use
+          image: nginx:latest
           ports:
-            - containerPort: 80  # port to expose
+            - containerPort: 80
